2010-04-21 Markus Malkusch <markus@malkusch.de>

    * classes/parser/AutoloaderFileParser.php (AutoloaderFileParser::getClassesInFile()):
    The Autoloader parser is able to return the list of found classes in a
    parsed file. This will be used in future to build an index before deployment
    in a productive environment.

2010-04-16 Markus Malkusch <markus@malkusch.de>

    * Autoloader.php (Autoloader.php):
    Autoloader classes are required only once, even if you have several
    Autoloader packages in your application. This might happen if you use
    external libraries which use the Autoloader by them selves in their
    class paths.

2010-04-15 Markus Malkusch <markus@malkusch.de>

    * classes/index/AutoloaderIndex_CSV.php (AutoloaderIndex_CSV):
    Index implementation which produces a human readable CSV file.

2010-04-14 Markus Malkusch <markus@malkusch.de>

    * classes/index/AutoloaderIndex_File.php (AutoloaderIndex_File):
    AutoloaderIndex_SerializedHashtable derives from AutoloaderIndex_File.
    This makes it easier to write a new Index implementation which uses
    an index file.

    * classes/index/AutoloaderIndex_PHPArrayCode.php (AutoloaderIndex_PHPArrayCode):
    Index implementation which produces a human readable file in PHP,
    which produces an array.

    * classes/index/AutoloaderIndex_IniFile.php (AutoloaderIndex_IniFile):
    Index implementation which produces a human readable file with an array
    in a PHP ini file style.

2010-04-10 Markus Malkusch <markus@malkusch.de>

    * classes/Autoloader.php (Autoloader::__autoload()):
    The search process is divided into first iterating through all indexes and
    then searching each path in the filesystem. This prevents in a multi
    Autoloader environment that before the index of a later Autoloader would
    be used the previous Autoloaders would vainly search their class paths.

    * classes/index/AutoloaderIndex.php (AutoloaderIndex::getPaths()):